--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "-": "^0.0.1",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.0",
